blockml/test/errors/11_report/e102/e102_one.view
view: e102_one
table: 1
fields:
- dimension: dim1
  sql: 111
